EJBCA 5.0.0
-----------

Old log and log configuration is gone.

Approvals. When upgrading from 4.x to 5.x new approval requests created in a 5.x instance can not be read in a 4.x instance. 
So if you require uptime and roll-back capabilities, only allow to create new approval requests from an 4.x host.
 
EJBCA 3.11.3
------------
This is a maintenance release containing 3 bug fixes.

* Noteworthy changes: 
- Certificate enrollment now works also with Safari and Chrome browsers. (Backport from EJBCA 4.0.2.)

Read the full Changelog for details.
For upgrade instructions, please see UPGRADE.

EJBCA 4.0.3
-----------
This is a maintenance release with a few improvements and bug fixes. In all 5 issues have been resolved.

* Noteworthy changes:
- Improved CMP interoperability, with minor improvement and bugfixes.
- Fixed a bug that made it impossible to delete end entity profile on certain databases, in particular hsql (test database).

Read the full Changelog for details.
For upgrade instructions, please see UPGRADE.

EJBCA 4.0.2
-----------
This is a maintenance release with many improvements and fixes. In all 44 issues have been resolved.

* Noteworthy changes:
- Internal optimizations makes this the fastest version of EJBCA ever, capable of issuing > 400 certificates/second (depending on configuration).
- Certificate enrollment now works also with Safari and Chrome browsers.
- Support for PrivateKeyUsagePeriod certificate extension. 
- Fixed a time zone bug issuing CVC certificates where the date was encoded using local timezone instead of GMT in certificates.
- More admin console and public web improvements from David Carella of Linagora.
- Now uses ISO8601 date format consistently when entering dates in admin console. 
- Automatic generation of Norwegian UNID numbers from CMP requests.
- Many small bug fixes and improvements.

The ISO8601 date format (yyyy-MM-dd HH:mm:ssZZ) is used in the Admin GUI and EJBCA WS interface,